--- a/productos.html
+++ b/productos.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JS Fashion Store</title>
+    <title>Productos</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -12,7 +12,6 @@
     />
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
   </head>
-
   <body>
     <header>
       <nav class="navbar" style="background-color: #da77a5">
@@ -25,21 +24,13 @@
           >
         </div>
       </nav>
-      <div class="imgHeader">
-        <h1>¡Bienvenidos a JS Fashion Store!</h1>
-        <p class="presentacion">
-          En nuestra tienda de ropa y accesorios encontrarás todo lo que
-          necesites para sentirte a gusto y darle un toque de originalidad a tus
-          outfits casuales o elegantes. Buscamos ofrecer ropa y accesorios de la
-          mejor calidad y criterio de la moda para que te acompañen en los
-          momentos importantes de tu vida.
-        </p>
-      </div>
+      <h1 id="tituloProducto"></h1>
     </header>
 
     <main>
-      <div class="container" id="productos">
-        <ul class="row" id="listaProductos"></ul>
+      <div id="infoProducto"></div>
+      <div id="button">
+        <button class="btn btn-outline-secondary" type="button">Volver</button>
       </div>
     </main>
 
@@ -113,6 +104,6 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    <script src="js/script.js"></script>
+    <script src="js/productos.js"></script>
   </body>
 </html>
