--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Este sitio es un proyecto integrador del 2do tramo del curso 'Desarrollador
+    Web Front End' de UNTREF"
+    />
+    <meta name="author" content="Mailen Sofia Zatta" />
     <title>JS Fashion Store</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
