--- a/productos.html
+++ b/productos.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Este sitio es un proyecto integrador del 2do tramo del curso 'Desarrollador
+    Web Front End' de UNTREF"
+    />
+    <meta name="author" content="Mailen Sofia Zatta" />
     <title>Productos</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -30,8 +36,10 @@
 
     <main>
       <div id="infoProducto"></div>
-      <div id="button">
-        <button class="btn btn-outline-secondary" type="button">Volver</button>
+      <div>
+        <button id="button" class="btn btn-outline-secondary" type="button">
+          Volver
+        </button>
       </div>
     </main>
 
